objects/Voucher__c.object
<CustomObject>
    <description>Store the Voucher required to enroll and register for a class</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Cart_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CC Cart Item related to the purchase of this voucher</description>
        <label>CC Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Location__c</fullName>
        <formula>ILT_Class__r.redwing__Location__r.Skedulo_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Class Location</inlineHelpText>
        <label>Class Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Class</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QR_Code_Web_Address__c</fullName>
        <formula>/*IF(ILT_Class__c != null, IF(CONTAINS($Api.Partner_Server_URL_260, &apos;TransDev1&apos;), &apos;https://transdev1-americanredcross.cs52.force.com/learner/s/ClaimVoucher?voucherid=&apos; +  Id,
    (If (CONTAINS($Api.Partner_Server_URL_260, &apos;Partial&apos;), &apos;https://partial-americanredcross.cs78.force.com/learner/s/ClaimVoucher?voucherid=&apos; + Id,
    &apos;https://transuat-americanredcross.cs26.force.com/learner/s/ClaimVoucher?voucherid=&apos; +Id))), &apos;&apos;)*/
IF(ILT_Class__c != null, $Label.Learner_Community_URL + &apos;/s/ClaimVoucher?voucherid=&apos; + Id, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IF(ILT_Class__c != null, HYPERLINK(Id , IMAGE(&quot;http://chart.apis.google.com/chart?cht=qr&amp;chs=150x150&amp;chl=&quot; &amp;QR_Code_Web_Address__c  , QR_Code_Web_Address__c )), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCO_Order_Id__c</fullName>
        <description>The Order Id is defined in DemandWare and used as a proxy to distinguish a specific RCO user session when browsing for and booking a class.  The Order Id is presumed to remain static throughout the entire customer RCO session.  The Order Id is used to identify a specific requestor for reserving/booking a class and allows the reservation service to be called multiple times during a single session (Idempotent).</description>
        <externalId>true</externalId>
        <label>RCO Order_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCO_Reservation_Timestamp__c</fullName>
        <description>Used in time-dependent workflow rule which releases reserved seat back to inventory after one hour from this time</description>
        <label>RCO Reservation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Order_Contact_1__c</fullName>
        <formula>CC_Order_Item__r.Related_Contact_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Order Contact 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order_Contact_2__c</fullName>
        <formula>CC_Order_Item__r.Related_Contact_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Order Contact 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Class__c</fullName>
        <formula>TEXT(MONTH(ILT_Class__r.redwing__Start_Date__c))+&quot;/&quot; +
TEXT(DAY(ILT_Class__r.redwing__Start_Date__c))+&quot;/&quot; +
TEXT(YEAR(ILT_Class__r.redwing__Start_Date__c))+ 
&quot; - &quot; + 
ILT_Class__r.ltui__Start_Time_Formatted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date of Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Voucher</description>
        <inlineHelpText>Current Status of Voucher</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                    <default>true</default>
                    <label>Issued</label>
                </value>
                <value>
                    <fullName>Temp Hold</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Voucher</relationshipLabel>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voucher</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Voucher_Claim__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Voucher Claim Number to be used by Learner to access a Course</inlineHelpText>
        <label>Voucher Claim #</label>
        <type>Text</type>
    </fields>
    <label>Voucher</label>
    <nameField>
        <displayFormat>VN {000000}</displayFormat>
        <label>Voucher Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>